fix: vertical align of OpalSignButton__sign

--- a/packages/opal-sign-button/src/components/OpalSignButton/index.css
+++ b/packages/opal-sign-button/src/components/OpalSignButton/index.css
@@ -18,10 +18,10 @@
 
 			body:not(._noFocusHighlight) &::after {
 				position: absolute;
-				top: -1px;
+				top: -2px;
 				right: 0;
 				bottom: 1px;
-				left: -3px;
+				left: -2px;
 				border: 1px solid var(--primaryColor500, $primaryColor);
 				border-radius: 3px;
 				content: '';
@@ -35,15 +35,13 @@
 	}
 		@el sign {
 			position: relative;
-			top: -1px;
 			display: inline-block;
 			box-sizing: border-box;
 			margin: 3px 3px 3px 0;
 			width: 28px;
-			height: 28px;
 			border: 2px solid;
 			border-radius: 50%;
-			vertical-align: middle;
+			line-height: 24px;
 			transition: border-color .1s linear;
 
 			&::before,
