--- a/packages/opal-tag-select/src/components/OpalTagSelect/index.css
+++ b/packages/opal-tag-select/src/components/OpalTagSelect/index.css
@@ -5,7 +5,6 @@
 	}
 		@el tag {
 			position: relative;
-			top: -1px;
 			display: inline-block;
 			margin: 2px 40px 2px 0;
 			padding: 0 10px 0 18px;
